--- a/style.css
+++ b/style.css
@@ -16,3 +16,13 @@
 .col{
     flex: auto;
 }
+
+#abapXmlExample {
+  overflow: hidden;
+  max-height: unset;
+}
+
+.fixed {
+  font-family: Courier;
+  font-weight: normal !important;
+}
